k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: erp-backend
  labels:
    app: erp-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: erp-backend
  template:
    metadata:
      labels:
        app: erp-backend
    spec:
      containers:
      - name: erp-backend
        image: vik0408/erp-backend:latest
        ports:
        - containerPort: 5000
